--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "task-manager-backend",
+  "name": "digital-resume-builder-backend",
   "version": "1.0.0",
-  "description": "Backend for Task Manager App",
+  "description": "Backend for Digital Resume Builder App",
   "main": "server.js",
   "scripts": {
     "test": "mocha",
@@ -26,6 +26,6 @@
     "nodemon": "^2.0.15",
     "sinon": "^19.0.2"
   },
-  "author": "Task Manager Team",
+  "author": "Digital Resume Builder Team",
   "license": "ISC"
 }
