--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "task-manager-frontend",
+  "name": "digital-resume-builder-frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
