improve ci security

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,10 +34,6 @@ jobs:
         MONGO_URI: ${{ secrets.MONGO_URI }}
         JWT_SECRET: ${{ secrets.JWT_SECRET }}
         PORT: ${{ secrets.PORT }}
-      run: |
-        echo "Secret 1 is: $MONGO_URI"
-        echo "Secret 2 is: $JWT_SECRET"
-        echo "Secret 3 is: $PORT"
 
     - run: pm2 stop all
 
@@ -47,7 +43,7 @@ jobs:
       run: |
        npm install --global yarn
        yarn --version
-       yarn install
+       yarn install --immutable
 
     # Install dependencies for frontend
     - name: Install Frontend Dependencies
@@ -55,7 +51,7 @@ jobs:
       run: |
         df -h
         sudo rm -rf ./build
-        yarn install
+        yarn install --immutable
         yarn run build
 
 
